--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "ava",
     "dev": "cross-env NODE_ENV='development' webpack",
     "build": "cross-env NODE_ENV='production' webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "pack": "cd .. && npx --prefix h5p-interactive-video h5p pack -r h5p-interactive-video h5p-interactive-video/interactive-video.h5p"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
+    "h5p": "^0.11.0",
+    "h5p-cli": "^1.1.4",
     "h5p-lib-controls": "0.0.15",
     "h5p-parent": "0.0.2",
     "mini-css-extract-plugin": "^2.8.1",
